app/styles/main.scss
/*****************************************************************************
  final_project
******************************************************************************/


@import '../../bower_components/bourbon/dist/_bourbon.scss';
@import '../../bower_components/neat/app/assets/stylesheets/_neat.scss';



/*****************************************************************************
  Base Styles
******************************************************************************/
body {
	margin-top: 46px;
	font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
	color: #2c3e50;
}

section {
	padding: 65px 0;
}

h1, h2 {
	font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
	text-align: center;
	text-transform: uppercase;
	font-size: 3em;
}

.headline h1 {
	font-size: 4.5em;
	color: #fff;
}

.headline h2 {
	font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
	color: #2c3e50;
	font-size: 2.0em;
	color: #fff;
	text-transform: none;
}

.h2-white {
	color: #fff;
}

hr {
	max-width: 250px;
	margin: 25px auto;
}

hr.hr-white {
	border-top: solid 5px #fff;
}

hr.hr-blue {
	border-top: solid 5px #2c3e50;
}

header {
	background-color: #B6C6CD;
}

img {
	display: block;
	margin: 0 auto;
}



p {
	font-size: 1.5em;
}

#home {
	display: block;
	width: 100%;
	background: #18bc9c;
	/*background: url('http://p1.pichost.me/i/14/1368941.jpg') no-repeat;
	background-size: cover;*/
}

.headline {
	padding: 80px 0;
}


#about, #contact {
	background: #fff;
}

#work {
	background: #18bc9c;
}

footer {
	background: #2c3e50; 
}

footer p {
	color: #fff;
	font-size: 1.1em;
	padding: 10px;
}

.work-item {
	margin: 12px 0;
}

/*.navbar-default {
	text-transform: uppercase;
	background-color: #2c3e50;
}

.navbar, .navbar-default .navbar-toggle, .navbar-brand {
	border-color: #2c3e50;
	color: #fff;
}*/

/*****************************************************************************
  Layout Styles
******************************************************************************/
.navbar {
	text-transform: uppercase;
	font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-weight: 600;
}

.navbar-default {
	background-color: #2c3e50;
	border-color: transparent;
}

.navbar-default .navbar-brand, 
.navbar-default .navbar-nav > li > a,
 {
	color: #fff;
	letter-spacing: 1px;
}

.navbar-default .navbar-toggle .icon-bar {
	background-color: #fff;
}

.navbar-default .navbar-toggle {
	border-color: transparent;
}

.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus, {
	background-color: #1a242f;
}

.navbar-default .navbar-brand:hover, .navbar-default .navbar-nav > li > a:hover {
	color: #18bc9c;
}

@media(min-width:768px) {
    .navbar-fixed-top {
        padding: 15px 0;
        transition: background .3s ease-in-out, padding .3s ease-in-out;
    }

    .navbar-fixed-top .navbar-brand {
     	font-size: 2em;
     	transition: all .3s;
     }

    .top-nav-collapse {
        padding: 0;
    }
}


/*****************************************************************************
  Module Styles
******************************************************************************/
.form-control {
	height: 4em;
	font-size: 1.5em;
	padding: 15px;
}

.btn-success {
	background-color: #18bc9c;
	border-color: #18bc9c;
	box-shadow: 0 3px 0 #0F7661;
}

.btn-success:hover {
	background-color: #128f76;
	border-color: #128f76;
}

.btn-lg {
	padding: 18px 27px;
	font-size: 19px;
}

